# workplace-politics-env

./: Dockerfile  README.md  __init__.py  baseline_scores.json  inf.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.sh
agent/: client.py
server/: Dockerfile  app.py  environment.py  models.py
