[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "officepolitics"
version = "0.1.0"
description = "Corporate Politics Simulator — OpenEnv Environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.1",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
server = "officepolitics.server.app:run"

[tool.setuptools.packages.find]
where = ["."]
```

**`officepolitics/server/requirements.txt`** (what Docker uses)
```
openenv-core[core]>=0.2.1
fastapi>=0.110.0
uvicorn[standard]>=0.29.0
pydantic>=2.0.0
httpx>=0.27.0