[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workplace-politics-env"
version = "1.0.0"
description = "Workplace Politics Simulator - OpenEnv Environment"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.1",
    "groq>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastmcp>=3.0.0",
    "websockets>=15.0.0",
]

[project.scripts]
server = "server.app:main"
